added option to move files after copying

--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -24,3 +24,7 @@ msgstr ""
 msgctxt "#30002"
 msgid "Delete synced files from remote?"
 msgstr ""
+
+msgctxt "#30003"
+msgid "Move remote files after sync?"
+msgstr ""
